# fastapi-sqlalchemy-auth-subscriptions

./: main.py  pyproject.toml  subscription.db
app/api/: auth.py  dependecies.py  subscription.py
app/core/: __init__.py  database.py  security.py
app/models/: subscription.py  user.py
app/schemas/: user.py
backend/: .dockerignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
backend/app/api/: __init__.py  auth.py  dependecies.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: subscription.py
backend/app/schemas/: __init__.py  subscription.py
